--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "4.4.1", features = ["derive"] }
+redis = { version = "0.23.2", features = ["tokio-comp"] }
